--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,13 @@
-
-version: 2
+version: 0.1
 jobs:
   build:
     docker:
-      - image: israelabebe/holistically-nested-edge-detection:0.1
+      - image:israelabebe/holistically-nested-edge-detection:latest
     steps:
       - checkout
+      - run:
+          name: Install Requests
+          command: python3.6 -m pip install requests
       - run: 
           name: Run Tests
           command: python3.6 -m unittest test_rpc_call.TestSuiteGrpc
