--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,14 @@ jobs:
     docker:
       - image: hed:0.1
     steps:
-      - checkout
+      - checkout 
       - run:
-        name: Run Tests
-        command: python3.6 -m unittest test_rpc_call.TestSuiteGrpc
+          name: Run Tests
+          command: python3.6 -m unittest test_rpc_call.TestSuiteGrpc
           
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
