--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -34,4 +34,4 @@ EXPOSE 50051
 
 RUN cd Service && python3.6 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. edgedetect.proto
 
-CMD ["python3.6", "Service/server.py"]
+CMD ["python3.6", "start_service.py"]
