model not found error fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Get Models
+          command: bash download.sh
+      - run:
           name: install GRPC
           command: python3.6 -m pip install grpcio grpcio-tools
       - run:
